css/styles.css
* {
    padding: 0px;
    margin: 0px;
    font-family: futura-pt, sans-serif;
}

header {
    height: 100vh;
    background-color: #3AAFA9;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-size: cover;
    justify-content: center;
}

#landing-page-name {
    font-size: 65px;
    color: #FEFFFF;
}

#landing-page-subtitle {
    font-size: 18px;
    color: #FEFFFF;
    font-style: italic;
    margin-bottom: 15px;
}

.resume-button {
	background-color:#3AAFA9;
    color:#FEFFFF;
    border:2px solid #FEFFFF;
	border-radius:2px;
	cursor:pointer;
	font-size:18px;
    padding:6px 20px;
}

.resume-button:hover {
    background-color:#FEFFFF;
    border-radius:2px;
    color:#3AAFA9;
}

footer {
    display: flex;
    align-items: center;
    background-color:#17252A;
    padding: 10px;
}

#footer-text {
    color:#FEFFFF;
    font-size: 18px;
}

#footer-link-name {
    color:#3AAFA9;
    font-size: 18px;
}

#footer-link-name:hover {
    color:#FEFFFF;
}

.footer-link { 
    display: inline;
    padding: 5px;
}

.social-link {
    color: #3AAFA9;
    transition-duration: 0.4s;
}

.social-link:hover {
    color: #FEFFFF;
}

